Update slides with Saskatoon instructor info, change alternate Mac text editor to TextWrangler since we are more familiar with that.

--- a/index.html
+++ b/index.html
@@ -34,13 +34,11 @@
         <span class="title-bg">Intro to HTML & CSS</span><br>
         <span class="title-bg">Building a Multi-page website</span>
         </h1>
-        <h2><span>with</span> Instructor Name</h2>
+        <h2><span>with</span> Shakiba Jalal</h2>
 
-        <img class="instructor-img" src="framework/img/profile-generic.jpg" alt="instructor name">
+        <img class="instructor-img" src="framework/img/shakiba.jpg" alt="Shakiba Jalal">
         <ul>
-        <li><i class="fa fa-envelope"></i><a href="mailto:">hello@email.com</li>
-        <li><i class="fa fa-desktop"></i><a href="#" target="_blank">mywebsite.com</a></li>
-        <li><i class="fa fa-twitter"></i><a href="http://twitter.com/" target="_blank">@twitter_name</a></li>
+        <li><i class="fa fa-envelope"></i><a href="mailto:">shakiba.jalal@gmail.com</a></li>
         </ul>
     </div>
     </header>
@@ -70,6 +68,7 @@ Follow this [link](http://ladieslearningcode.github.io/llc-html-css-multi-page-s
 * More CSS & HTML
 * Final touches
 * Next steps
+* Getting your site online
         </section>
 
         <section class="slide" data-markdown>
@@ -97,7 +96,7 @@ You can write code using your computer's default text editor, Notepad (Windows) 
 
 If you are unable to install Sublime Text, there are many free and paid [options](http://en.wikipedia.org/wiki/List_of_HTML_editors).  
 
-Try [Notepad++](http://notepad-plus-plus.org/) (Windows) or [Atom](https://atom.io/) (Mac).
+Try [Notepad++](http://notepad-plus-plus.org/) (Windows) or [TextWrangler](https://itunes.apple.com/ca/app/textwrangler/id404010395?mt=12#) (Mac).
         </section>
 
         <section class="slide" data-markdown>
