--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <img class="instructor-img" src="framework/img/shakiba.jpg" alt="Shakiba Jalal">
         <ul>
-        <li><i class="fa fa-envelope"></i><a href="mailto:">shakiba.jalal@gmail.com</a></li>
+        <li><i class="fa fa-envelope"></i><a href="mailto:shakiba.jalal@gmail.com">shakiba.jalal@gmail.com</a></li>
         </ul>
     </div>
     </header>
