--- a/index.html
+++ b/index.html
@@ -1953,24 +1953,7 @@ margin: 0 auto;</textarea>
         <section class="slide" data-markdown>
             ##Getting your site online
 
-            You will need to register a domain name (www.mysite.com) and get hosting. Here are a couple domain & hosting options:
-            
-            * [hover.com](https://www.hover.com/?ircid=2799&irmpname=Ladies+Learning+Code)
-            * [dreamhost.com](http://www.dreamhost.com/r.cgi?205190)  
-            * [bluehost.com](http://www.bluehost.com/)
-
-            To get your files online, you will need upload your files to your newly purchased hosting server.
-
-            There are a few pieces of information you will need and are usually provided to you by your hosting service provider.
-
-            * FTP Address
-            * Username
-            * Password
-
-            Here's a nice tutorial getting your files online: [FTP For Beginners: How to Upload Your Files](http://webdesign.com/ftp-for-beginners-how-to-upload-your-files/)
-
-            Feeling adventurous? Try [Hosting Static Sites on Github for Beginners](http://thephuse.com/development/hosting-static-sites-on-github-for-beginners/).
-
+            Next we will offer an optional mini workshop to help you with getting your site online, if you choose to.
         </section>
 
         <!-- Last slide -->
