update content with Brittany and Shakiba's edits

--- a/project/index.html
+++ b/project/index.html
@@ -3,15 +3,17 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Page Title</title>
+		<link rel="stylesheet" href="style.css">
+		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<header>
-			<h1>Your Name Here</h1>
-			<h2>Your tag line</h2>
+			<h1>Britt</h1>
+			<h2>Shak attack</h2>
 		</header>
 
 		<footer>
-			<p>This is the footer</p>
+			<p>This is the footer yooooo &#169</p>
 		</footer>
 	</body>
 </html>
